8/6/10 alternative color key that shows discrete color "chips" for each integer pH value
8/6/10 pH color strategy that uses specific colors for each integer pH value
8/6/10 use strategy pattern for creating pH colors, until we decide which approach is best
8/6/10 disable color animation for pH paper (see PHPaper.ANIMATE_COLOR)
# 0.00.16 (42834) Aug 4, 2010
8/4/10 demonstrate first pass at pH paper
8/4/10 placeholder for conductivity tester visual representation
8/4/10 invert mapping of pH to wavelength, acids should be red-orange, bases should be green-blue
8/4/10 bug fix, pH paper didn't change to correct color if solution was changed while paper is not dipped
8/4/10 pH color key
8/3/10 add listener for pH paper "dipped height" property
8/3/10 clean up listener stuff in PHPaper
8/3/10 added interpolation between colors for the PhPaper
8/3/10 store the dipped height for when the ph paper is removed from the water
8/4/10 added placeholder node for pH paper color key, visible when pH paper is visible
8/4/10 constants for min/max pH
8/3/10 second pass at pH paper
8/3/10 first pass at conductivity tester model
8/2/10 first pass at pH paper (geometry and dragging)
8/2/10 misc javadoc
8/2/10 add model element for reaction equation
8/2/10 fix names of add/remove listener methods
8/2/10 delete ABSClock, document why dummy clock in ABSModule
8/2/10 limit nodes to knowledge of specific model element, rather than the entire model
8/2/10 move "water visible" property to magnifying glass model
8/2/10 SolutionRepresentation base class
8/2/10 adjust layout and location of pH meter so that we have room to dip other things in beaker
7/1/10 remove bogus import of advanced-acid-base-solutions
# 0.00.15 (42038) Jun 30, 2010
6/30/10 misc cleanup before putting sim on hold, pending CAB feedback
6/30/10 constrain dragging of pH meter so that only the probe can be submerged
6/30/10 add pH meter shaft and tip sizes to the model, so we can tell when the meter is fully submerged